backendspring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springtempcollector
  labels:
    app: springtempcollector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springtempcollector
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: 'true'
      labels:
        app: springtempcollector
    spec:
      containers:
        - name: springtempcollector
          image: sameermosesmurala/springtempcollector
          ports:
            - containerPort: 8082
