appservice.yaml
apiVersion: v1
kind: Service
metadata:
    name: backendspringservice
spec:
    ports:
      - name: javaapp
        port: 8082
        targetPort: 8082
    selector:
        app: javaapp
    type: ClusterIP
