backendspring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backendcors
spec:
  ports:
    - name: springtempcollector
      port: 8082
      targetPort: 8082
    - name: backendcollector
      port: 5555
      targetPort: 5555
  selector:
    app: backendcors
  type: LoadBalancer
